<resources>
    <string name="app_name">whereu@</string>
    <string name="version_number">V1.0</string>
    <string name="verification_code_input_prompt">enter your verification code here</string>
    <string name="verification_input_text">XXXXX</string>
    <string name="phone_number_input_prompt">enter your phone number here</string>
    <string name="area_code_input_hint">XXX</string>
    <string name="line_number_input_hint">XXX-XXXX</string>
    <string name="account_request_btn_text">verify</string>
    <string name="account_create_btn_text">submit</string>
    <string name="logo_description">whereu@ logo</string>
    <string name="key_location_prompt_title_text">Add Key Location</string>
    <string name="key_location_prompt_hint_text">Current location name</string>
    <string name="duplicate_location_prompt_title_text">Duplicate location name</string>
    <string name="duplicate_location_body_text">You already have a key location called \"%s\". Are you sure you want to create another one?</string>
    <string name="add_contact_prompt_title_text">Add a new contact</string>
    <string name="add_contact_prompt_hint_text">Contact name</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="delete_contact_req_description">Delete a pending contact request.</string>
    <string name="add_contact_req_description">Add a contact with a pending request.</string>
    <string name="contact_requests">Contact Requests</string>
    <string name="settings">Settings</string>
    <string name="delete_key_loc_description">Delete a key location.</string>
    <string name="edit_key_loc_description">Edit a key location\'s name.</string>
    <string name="key_locations">Key Locations</string>
    <plurals name="request_count">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>Key Locations</item>
        <item>Contact Requests</item>
        <item>Settings</item>
    </string-array>
    <array name="drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_key_location</item>
        <item>@drawable/ic_pending_reqs</item>
        <item>@drawable/ic_settings</item>
    </array>
</resources>
